# slight-lisp

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: External_GMock.cmake  External_GTest.cmake  External_editline.cmake
include/slightlisp/: env.hpp  eval.hpp  parser.hpp  special_forms.hpp  syntax_exception.hpp  types.hpp  value.hpp
src/: env.cpp  eval.cpp  prompt.c  repl.cpp  special_forms.cpp  value.cpp
tests/: test_env.cpp  test_eval.cpp  test_parser.cpp  test_special_forms.cpp  test_types.cpp  test_value.cpp
